--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Sewil"
         tools:targetApi="31">
         <activity
+            android:name=".ui.quartoslimpezamanutencao.NovoChamadoLimpezaActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.agendamentomanutencao.ChamadoManutencaoActivity"
             android:exported="false" />
         <activity
